@@ -205,7 +205,7 @@
 		<dependency>
 			<groupId>net.jqwik</groupId>
 			<artifactId>jqwik</artifactId>
-			<version>1.7.1</version>
+			<version>1.7.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -337,6 +337,7 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
 						--add-opens java.base/java.math=ALL-UNNAMED
 						--add-opens java.base/java.net=ALL-UNNAMED
 						--add-opens java.base/java.time=ALL-UNNAMED
